[package]
name = "exhume_filesystem"
version = "0.3.2"
edition = "2024"
description = "This exhume module is proposing a standard abstraction layer of a FileSystem, File and Directory for any exhume filesystem modules (extfs, ...)."
documentation = "https://www.forensicxlab.com/docs/category/exhume---filesystem"
authors = ["k1nd0ne"]
license = "GPL-2.0-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exhume_body = "=0.3.4"

exhume_extfs = "=0.1.9"
exhume_ntfs = "=0.1.6"
exhume_exfat = "=0.1.3"
# exhume_extfs = { path = "../exhume_extfs" }
# exhume_ntfs = { path = "../exhume_ntfs" }
#exhume_exfat = { path = "../exhume_exfat" }


# We will propose LVM on top of the filesystem later
#exhume_lvm = { path = "../exhume_lvm" }
log = "0.4.25"
clap = "4.0"
clap-num = "1.1.1"
env_logger = "0.11.6"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
