[package]
name = "exhume_filesystem"
version = "0.3.3"
edition = "2024"
description = "This exhume module is proposing a standard abstraction layer of a FileSystem, File and Directory for any exhume filesystem modules (extfs, ...)."
documentation = "https://www.forensicxlab.com/docs/category/exhume---filesystem"
authors = ["k1nd0ne"]
license = "GPL-2.0-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exhume_body = "=0.4.0"
exhume_extfs = "=0.1.10"
exhume_ntfs = "=0.1.10"
exhume_exfat = "=0.1.4"
exhume_apfs = { path = "../exhume_apfs", version = "0.1.0" }
# exhume_extfs = { path = "../exhume_extfs" }
# exhume_ntfs = { path = "../exhume_ntfs" }
# exhume_exfat = { path = "../exhume_exfat" }


# We will propose LVM on top of the filesystem later
#exhume_lvm = { path = "../exhume_lvm" }
log = "0.4.25"
clap = { version = "4.5", features = ["cargo"] }
clap-num = "1.1.1"
env_logger = "0.11.6"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
